cut a few more pages out

--- a/doc/cie/cie.tex
+++ b/doc/cie/cie.tex
@@ -61,10 +61,14 @@
 \maketitle
 
 \begin{abstract}
-  Realizability is not only a fundamental tool in logic
-  and computability, but also has direct application to the design and
-  implementation of programs: it can produce a code description of the data
-  structure (its interface) directly corresponding to a
+  Realizability theory 
+\iflong 
+  is not only a fundamental tool in logic
+  and computability, but also 
+\fi % \iflong
+  has direct application to the design and
+  implementation of programs: it can produce code describing the data
+  structure corresponding to a
   mathematical theory.
 %
   Our tool, called RZ,
@@ -72,7 +76,7 @@
   mathematics and programming. By using the realizability
   interpretation of constructive mathematics, RZ 
   translates specifications in constructive logic into annotated
-  interface code in a programming language, currently Objective Caml.
+  interface code in Objective Caml.
 %
   This lightweight system supports
   a rich input language allowing descriptions of
