--- a/doc/cie/introduction.tex
+++ b/doc/cie/introduction.tex
@@ -21,7 +21,7 @@ mathematical analysis, the answer is much less obvious. How do we
 implement the real numbers (a Cauchy-complete Archimedean ordered
 field)? Or, design the operations supported by a compact metric
 space or a space of smooth functions? Significant research goes into
-finding representations that provide a satisfiedisfactory theory of
+finding representations that provide a satisfactory theory of
 computability on such structures~\cite{Wei00,TZ98,Bla97,EL00}, and
 implementations of exact real arithmetic~\cite{Mue00,Lam05a} show that
 the theory can be put into practice quite successfully.
@@ -54,10 +54,13 @@ than others in practice.
 \fi % \iflong 
 And few programmers --- even those with strong backgrounds in
 mathematics and classical logic --- are familiar with constructive logic or
-realizability.  Programmers are used to language constructs
+realizability. 
+\iflong
+Programmers are used to language constructs
 describing interfaces (e.g., C++ header files, ML signatures, or Java
 interfaces) and logical assertions (e.g., preconditions
 and postconditions).
+\fi
 
 %\bigskip
 
