--- a/doc/cie/logic.tex
+++ b/doc/cie/logic.tex
@@ -3,39 +3,6 @@
 \section{The Input Language}
 \label{sec:input-language}
 
-A RZ \emph{theory} is a generalized logical signature with associated
-axioms, similar to a Coq module signature. Theories are descriptions
-of \emph{models}, or implementations. The input is the definition of
-one or more \emph{theories}; Figure~\ref{fig:kuratowski} shows a
-sample input for the RZ system. RZ does not permit models to be
-written directly, but it does allow a declaration of a model of a
-given theory.
-
-The simplest theory $\ith$ is a list of \emph{theory element}\/s
-$\ite_1 \ldots \ite_n$. A theory element may specify that a certain
-set, set element, proposition or predicate, or model must exist (using
-the 
-\textsf{Parameter} keyword). It may also provide a definition
-of a set, term, proposition, predicate, or theory (using the 
-\textsf{Definition} keyword). Finally, a theory element can be
-a named axiom (using the \textsf{Axiom} keyword).
-
-We allow model parameters in theories; 
-typical examples in mathematics include
-the theory of a vector space parameterized by a field of scalars,
-or the theory of the real numbers parameterized by a model of the
-natural numbers.
-Following Sannella, Sokolowski, and 
-Tarlecki\footnote{``parameterized (program specification) $\neq$ (parameterized program) specification''}~\cite{sannella92:_towar} RZ supports two forms of parameterization.  A theory of a parameterized implementation
-$\idarrow{\iM}{\ith_1}{\ith_2}$ describes a uniform family of models (i.e.,
-a single implementation; a functor in OCaml) that maps every
-model~$\im$ satisfying~$\ith_1$ to a model of~$\ith_2$.  In contrast,
-a theory $\ilambda{\iM}{\ith_1}{\ith_2}$
-maps models to theories; if $\iTH$ is such a theory, then
-$\iTH(\im_1)$ and $\iTH(\im_2)$ are theories whose implementations might be completely unrelated.\footnote{
-Further, in some cases $\iTH(\im_1)$ might be implementable while $\iTH(\im_2)$ is not.
-}
-
 \begin{figure}
 	\[
 	\begin{array}{rl@{\quad}l}
@@ -120,6 +87,39 @@ Further, in some cases $\iTH(\im_1)$ might be implementable while $\iTH(\im_2)$ 
 	\caption{Input Syntax (Simplified)}
 \end{figure}
 
+The input to RZ consists of one or more theories.
+A RZ \emph{theory} is a generalized logical signature with associated
+axioms, similar to a Coq module signature. Theories describe
+of \emph{models}, or implementations. A summary of the input
+language appears in Figure~\ref{fig:input}.
+
+\iflong
+The simplest theory $\ith$ is a list of \emph{theory element}\/s
+$\ite_1 \ldots \ite_n$. A theory element may specify that a certain
+set, set element, proposition or predicate, or model must exist (using
+the 
+\textsf{Parameter} keyword). It may also provide a definition
+of a set, term, proposition, predicate, or theory (using the 
+\textsf{Definition} keyword). Finally, a theory element can be
+a named axiom (using the \textsf{Axiom} keyword).
+
+We allow model parameters in theories; 
+typical examples in mathematics include
+the theory of a vector space parameterized by a field of scalars,
+or the theory of the real numbers parameterized by a model of the
+natural numbers.
+Following Sannella, Sokolowski, and 
+Tarlecki\footnote{``parameterized (program specification) $\neq$ (parameterized program) specification''}~\cite{sannella92:_towar} RZ supports two forms of parameterization.  A theory of a parameterized implementation
+$\idarrow{\iM}{\ith_1}{\ith_2}$ describes a uniform family of models (i.e.,
+a single implementation; a functor in OCaml) that maps every
+model~$\im$ satisfying~$\ith_1$ to a model of~$\ith_2$.  In contrast,
+a theory $\ilambda{\iM}{\ith_1}{\ith_2}$
+maps models to theories; if $\iTH$ is such a theory, then
+$\iTH(\im_1)$ and $\iTH(\im_2)$ are theories whose implementations might be completely unrelated.\footnote{
+Further, in some cases $\iTH(\im_1)$ might be implementable while $\iTH(\im_2)$ is not.
+}
+
+
 Propositions and predicates appearing in theories may use full
 first-order constructive logic, not just the negative fragment. The
 grammar for logical inputs is shown in Figure~\ref{fig:input}. Most of
@@ -133,8 +133,9 @@ dependent function spaces. We also supports disjoint unions (with
 labeled tags), quotient spaces (a set modulo a stable equivalence
 relation), subsets (elements of a set satisfying a predicate). RZ even
 permits explicit references to sets of realizers.
+\fi
 
-The term language follows the structure of the set level by providing
+Note that term language follows the structure of the set level by providing
 introduction and elimination constructs. For product sets we have
 tuples and projections ($\iproj{\ie}{1}$, $\iproj{\ie}{2}$, \ldots),
 and for function spaces we have lambda abstractions and application.
